k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app
  labels:
    app: flask
spec:
  type: NodePort
  selector:
    app: flask
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
